Fix Surface window retain for Forge glfwInit and add performance diagnostics.
Keep ANativeWindow alive across launch, refresh staged bridge natives, and export a performance snapshot with diagnostic logs.